# LocalAGI

./: Dockerfile  README.md  docker-compose.with-localai.yaml  docker-compose.with-sound.yaml  docker-compose.yaml  pyproject.toml  run-full-stack.sh  run.sh
src/localagi/: __main__.py  agent_action_context.py  agent_actions.py  config.py  constants.py  localagi.py  vector_db.py
